Bug 1257959 - Dynamic toolbar transition seems to slow down flings r=kats